RESOLVED FIXED73751
platform/mac/accessibility/search-when-element-starts-in-table.html is failing
https://bugs.webkit.org/show_bug.cgi?id=73751
Summary platform/mac/accessibility/search-when-element-starts-in-table.html is failing
chris fleizach
Reported 2011-12-03 11:39:09 PST
It seems that this test is failing on lion platform/mac/accessibility/search-when-element-starts-in-table.html PASS resultElement.role is 'AXRole: AXHeading' -PASS resultElement.title is 'AXTitle: outside heading' -PASS resultElement.role is 'AXRole: ' +FAIL resultElement.title should be AXTitle: outside heading. Was AXTitle: heading. +FAIL resultElement.role should be AXRole: . Was AXRole: AXHeading. PASS resultElement.role is 'AXRole: AXCell' PASS successfullyParsed is true
Attachments
patch (9.61 KB, patch)
2011-12-05 12:35 PST, chris fleizach
darin: review+
chris fleizach
Comment 1 2011-12-05 09:23:49 PST
Must have missed this when I made searching work faster.
chris fleizach
Comment 2 2011-12-05 11:23:02 PST
This actually exposed some other bugs with navigating backwards
chris fleizach
Comment 3 2011-12-05 12:35:45 PST
chris fleizach
Comment 4 2011-12-05 12:59:57 PST
Note You need to log in before you can comment on or make changes to this bug.